# MarchMadness

./: README.md  march_madness.yaml  pyproject.toml  requirements.txt
src/marchmadness/: __init__.py  cli.py  config.py  predictor.py  run_prediction.py
src/marchmadness/analysis/: __init__.py  visualizer.py
src/marchmadness/data/: __init__.py  scraper.py
src/marchmadness/models/: __init__.py  mcmc.py
src/marchmadness/utils/: __init__.py  bracket.py
tests/: conftest.py  test_bracket.py  test_config.py  test_mcmc.py  test_predictor.py  test_scraper.py  test_visualizer.py
